--- a/CSS/nosotros.css
+++ b/CSS/nosotros.css
@@ -1,30 +1,37 @@
-/* Featurettes
-  ------------------------- */
-.featurette {
-    margin: -2em 3em -2em 3em;
+@media only screen and (min-width: 768px) {
+
+    /* For desktop: */
+    .featurette {
+        margin: -2em 3em -2em 3em;
+    }
+
+    .featurette-divider {
+        margin: 5rem 0;
+    }
+
+    .featurette-heading {
+        font-weight: 300;
+        line-height: 1;
+        letter-spacing: -.05rem;
+    }
+
+    #areaLink {
+        margin-top: -8em;
+    }
+
+    #intro {
+        margin-bottom: -7em;
+    }
+
+    img {
+        height: 500px;
+        width: 500px;
+    }
+
 }
-
-
-.featurette-divider {
-    margin: 5rem 0;
-    /* Space out the Bootstrap <hr> more */
-}
-
-/* Thin out the marketing headings */
-.featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    /* rtl:remove */
-    letter-spacing: -.05rem;
-}
-
-
-/* RESPONSIVE CSS
-  -------------------------------------------------- */
 
 @media (min-width: 40em) {
 
-    /* Bump up size of carousel content */
     .carousel-caption p {
         margin-bottom: 1.25rem;
         font-size: 1.25rem;
@@ -42,15 +49,31 @@
     }
 }
 
-#areaLink {
-    margin-top: -8em;
-}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
 
-#intro {
-    margin-bottom: -7em;
-}
+    html, img {
+        width: 100%;
+    }
 
-img {
-    height: 500px;
-    width: 500px;
+    body {
+        margin: 0em 1em 0em 1em;
+    }
+
+    .col-md-7 {
+        padding: 0em 1em 0em 1em;
+    }
+
+    .py-5 {
+        padding-bottom: 0em !important;
+    }
+
+    .featurette-divider {
+        margin: 2em 0em 2em 0em;
+    }
+
+    #arealink {
+        padding-top: 0em !important;
+        padding-bottom: 2em !important;
+    }
 }
