--- a/CSS/nosotros.css
+++ b/CSS/nosotros.css
@@ -74,6 +74,6 @@
 
     #arealink {
         padding-top: 0em !important;
-        padding-bottom: 2em !important;
+        margin-bottom: 4em !important;
     }
 }
