--- a/Galeria.css
+++ b/Galeria.css
@@ -1,5 +1,5 @@
 .color{
-	background-color: #EB984E;
+	background-color: #afafff;
 }
 
 
@@ -36,7 +36,7 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	background-image: linear-gradient(to top, #EB984E 0%, #000000a1 100%);
+	background-image: linear-gradient(to top, #afafff 0%, #000000a1 100%);
 	width: 100%;
 	height: 0;
 	transition: 0.55s ease;
@@ -115,4 +115,17 @@
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 60px;
+
+}
+
+.Pat{
+	width: 3em;
+}
+#footer{
+    background: #000000;
+    color: azure;
+}
+
+img{
+    border-radius: 75px;
 }
