Finalizando Experiencia 1 con mejoras al sitio DEFINITIVO

--- a/estilos.css
+++ b/estilos.css
@@ -94,10 +94,14 @@ nav{
 
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
     .parrafo {
-        width: 45%;
+        width: 93%;
         margin-bottom: 30px;
+    }
+
+    #bloques{
+        width: auto;
     }
 }
 
@@ -121,10 +125,4 @@ img{
 
 .Pat{
 	width: 3em;
-}
-
-@media (max-width: 300px){
-    .nav{
-        width: 45%;
-    }
 }
